fixed bug: button looks different on IE
Former-commit-id: 14bb8536a5dd9a881773620cb1c5bd5018246671

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -150,7 +150,8 @@ hr {
   background-color: @from;
   background-image: -webkit-linear-gradient(top, @from 0%, @to 100%);
   background-image:    -moz-linear-gradient(top, @from 0%, @to 100%);
-  background-image:      -ms-gradient(to bottom, @from 0%, @to 100%);
+  background-image:      -ms-linear-gradient(top, @from 0%, @to 100%) !important;
+  background-image:      -ms-gradient(top, @from 0%, @to 100%) !important;
   background-image:      -o-linear-gradient(top, @from 0%, @to 100%);
   background-image:         linear-gradient(top, @from 0%, @to 100%);
 }
